bugs fixed, scrollbar fixed

--- a/css/main.css
+++ b/css/main.css
@@ -39,8 +39,9 @@ a{
 
 ::-webkit-scrollbar {
     width: 10px;
-  }
-  
+    height: 10px;
+
+}
   /* Track */
   ::-webkit-scrollbar-track {
 
@@ -48,8 +49,19 @@ a{
   
   /* Handle */
   ::-webkit-scrollbar-thumb {
+    width: 10px;
     background: rgba(255,255,255,0.2);
     border: solid 1px rgba(255, 255, 255, 0.3);
+  }
+
+  ::-webkit-scrollbar-thumb:vertical{
+    background: rgba(0,0,0,0.2);
+    border: solid 1px rgba(255, 255, 255, 0.3);
+  }
+
+  ::-webkit-scrollbar-thumb:vertical:hover{
+    background: rgba(0,0,0,0.3);
+    border: solid 1px rgba(255, 255, 255, 0.4);
   }
   
   /* Handle on hover */
